--- a/Responsive web design/TributePage/index.html
+++ b/Responsive web design/TributePage/index.html
@@ -11,62 +11,62 @@
     <main id="main">
         <section>
             <h1 id="title">Dr. Norman Borlaug</h1>
-            <p>The man who salved a billion lives</p>
+            <p id="sub-title">The man who salved a billion lives</p>
         </section>
         <figure id="img-div">
             <img src="./Assets/tribute-page-main-image.jpg" alt="tribute page main image" id="image">
             <figcaption id="img-caption">Dr. Norman Borlaug, third from the left, trains biologists in Mexico on how to increase wheat yields - part of his life-long war on hunger.</figcaption>
         </figure>
-        <article>
+        <article id="cronologia">
             <h3 id="tribute-info">Here's a time line of Dr. Borlaug's life:</h3>
             <ul>
                 <div>
-                    <li>1914</li><p>-Born in Cresco, Iowa</p>
+                    <li><b>1914</b> - Born in Cresco, Iowa</li>
                 </div>
                 <div>
-                    <li>1933</li><p>- Leaves his family's farm to attend the University of Minnesota, thanks to a Depression era program known as the "National Youth Administration" </p>
+                    <li><b>1933</b> - Leaves his family's farm to attend the University of Minnesota, thanks to a Depression era program known as the "National Youth Administration" </li>
                 </div>
                 <div>
-                    <li>1935</li><p>- Has to stop school and save up more money. Works in the Civilian Conservation Corps, helping starving Americans. "I saw how food changed them", he said. "All of this left scars on me." </p>
+                    <li><b>1935</b> - Has to stop school and save up more money. Works in the Civilian Conservation Corps, helping starving Americans. "I saw how food changed them", he said. "All of this left scars on me." </li>
                 </div>
                 <div>
-                    <li>1937</li><p>- Finishes university and takes a job in the US Forestry Service </p>
+                    <li><b>1937</b> - Finishes university and takes a job in the US Forestry Service </li>
                 </div>
                 <div>
-                    <li>1938</li><p>- Marries wife of 69 years Margret Gibson. Gets laid off due to budget cuts. Inspired by Elvin Charles Stakman, he returns to school study under Stakman, who teaches him about breeding pest-resistent plants. </p>
+                    <li><b>1938</b> - Marries wife of 69 years Margret Gibson. Gets laid off due to budget cuts. Inspired by Elvin Charles Stakman, he returns to school study under Stakman, who teaches him about breeding pest-resistent plants. </li>
                 </div>
                 <div>
-                    <li>1941</li><p>- Tries to enroll in the military after the Pearl Harbor attack, but is rejected. Instead, the military asked his lab to work on waterproof glue, DDT to control malaria, disinfectants, and other applied science. </p>
+                    <li><b>1941</b> - Tries to enroll in the military after the Pearl Harbor attack, but is rejected. Instead, the military asked his lab to work on waterproof glue, DDT to control malaria, disinfectants, and other applied science. </li>
                 </div>
                 <div>
-                    <li>1942</li><p>- Receives a Ph.D. in Genetics and Plant Pathology </p>
+                    <li><b>1942</b> - Receives a Ph.D. in Genetics and Plant Pathology </li>
                 </div>
                 <div>
-                    <li>1944</li><p> - Rejects a 100% salary increase from Dupont, leaves behind his pregnant wife, and flies to Mexico to head a new plant pathology program. Over the next 16 years, his team breeds 6,000 different strains of disease resistent wheat - including different varieties for each major climate on Earth. </p>
+                    <li><b>1944</b> - Rejects a 100% salary increase from Dupont, leaves behind his pregnant wife, and flies to Mexico to head a new plant pathology program. Over the next 16 years, his team breeds 6,000 different strains of disease resistent wheat - including different varieties for each major climate on Earth. </li>
                 </div>
                 <div>
-                    <li>1945</li><p>- Discovers a way to grown wheat twice each season, doubling wheat yields </p>
+                    <li><b>1945</b> - Discovers a way to grown wheat twice each season, doubling wheat yields </li>
                 </div>
                 <div>
-                    <li>1953</li><p> - crosses a short, sturdy dwarf breed of wheat with a high-yeidling American breed, creating a strain that responds well to fertilizer. It goes on to provide 95% of Mexico's wheat. </p>
+                    <li><b>1953</b> - crosses a short, sturdy dwarf breed of wheat with a high-yeidling American breed, creating a strain that responds well to fertilizer. It goes on to provide 95% of Mexico's wheat. </li>
                 </div>
                 <div>
-                    <li>1962</li><p> - Visits Delhi and brings his high-yielding strains of wheat to the Indian subcontinent in time to help mitigate mass starvation due to a rapidly expanding population </p>
+                    <li><b>1962</b> - Visits Delhi and brings his high-yielding strains of wheat to the Indian subcontinent in time to help mitigate mass starvation due to a rapidly expanding population </li>
                 </div>
                 <div>
-                    <li>1970</li><p> - receives the Nobel Peace Prize</p>
+                    <li><b>1970</b> - receives the Nobel Peace Prize</li>
                 </div>
                 <div>
-                    <li>1983</li><p>  - helps seven African countries dramatically increase their maize and sorghum yields </p>
+                    <li><b>1983</b> - helps seven African countries dramatically increase their maize and sorghum yields </li>
                 </div>
                 <div>
-                    <li>1984</li><p> - becomes a distinguished professor at Texas A&M University </p>
+                    <li><b>1984</b> - becomes a distinguished professor at Texas A&M University </li>
                 </div>
                 <div>
-                    <li>2005</li><p> - states "we will have to double the world food supply by 2050." Argues that genetically modified crops are the only way we can meet the demand, as we run out of arable land. Says that GM crops are not inherently dangerous because "we've been genetically modifying plants and animals for a long time. Long before we called it science, people were selecting the best breeds." </p>
+                    <li><b>2005</b> - states "we will have to double the world food supply by 2050." Argues that genetically modified crops are the only way we can meet the demand, as we run out of arable land. Says that GM crops are not inherently dangerous because "we've been genetically modifying plants and animals for a long time. Long before we called it science, people were selecting the best breeds." </li>
                 </div>
                 <div>
-                    <li>2009</li><p> - dies at the age of 95.</p>
+                    <li><b>2009</b> - dies at the age of 95.</li>
                 </div>
 
                 <p>
@@ -78,7 +78,7 @@
         </article> 
         <section class="footer">
             If you have time, you should read more about this incredible human being on his 
-            <a href="">Wikipedia entry.</a>  
+            <a href="https://en.wikipedia.org/wiki/Norman_Borlaug">Wikipedia entry.</a>  
         </section>
     </main>
 </body>
