--- a/Responsive web design/TributePage/index.html
+++ b/Responsive web design/TributePage/index.html
@@ -14,7 +14,7 @@
             <p id="sub-title">The man who salved a billion lives</p>
         </section>
         <figure id="img-div">
-            <img src="./Assets/tribute-page-main-image.jpg" alt="tribute page main image" id="image">
+            <img src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute-page-main-image.jpg" alt="tribute page main image" id="image">
             <figcaption id="img-caption">Dr. Norman Borlaug, third from the left, trains biologists in Mexico on how to increase wheat yields - part of his life-long war on hunger.</figcaption>
         </figure>
         <article id="cronologia">
@@ -76,9 +76,9 @@
                 </p>
             </ul>
         </article> 
-        <section class="footer">
+        <section id="footer">
             If you have time, you should read more about this incredible human being on his 
-            <a href="https://en.wikipedia.org/wiki/Norman_Borlaug">Wikipedia entry.</a>  
+            <a id="tribute-link" target="_blank" href="https://en.wikipedia.org/wiki/Norman_Borlaug">Wikipedia entry.</a>  
         </section>
     </main>
 </body>
