--- a/Responsive web design/Product_Landing_Page/index.html
+++ b/Responsive web design/Product_Landing_Page/index.html
@@ -5,8 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Product_Landing_Page</title>
+    <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-    
+    <header id="header">
+        <img src="" alt="logo">
+        <nav id="nav-bar">
+            <button class="nav-link"></button>
+            <button class="nav-link"></button>
+            <button class="nav-link"></button>
+        </nav>
+    </header>
+    <form id="form" action="https://www.freecodecamp.com/email-submit">
+        <h2>Hancrafted, home-made masterpices</h2>
+        <input id="email" type="email" placeholder="enter your email address" pattern="[a-zA-Z0-9_]+([.][a-zA-Z0-9_]+)*@[a-zA-Z0-9_]+([.][a-zA-Z0-9_]+)*[.][a-zA-Z]{1,5}" required>
+        <input name="email" id="submit" type="submit" value="GET STARTED"></input> 
+    </form>
 </body>
 </html>
