--- a/Responsive web design/Product_Landing_Page/index.html
+++ b/Responsive web design/Product_Landing_Page/index.html
@@ -6,14 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Product_Landing_Page</title>
     <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+
 </head>
 <body>
     <header id="header">
-        <img src="" alt="logo">
+        <img id="logo" src="" alt="logo">
         <nav id="nav-bar">
-            <button class="nav-link"></button>
-            <button class="nav-link"></button>
-            <button class="nav-link"></button>
+            <button class ="nav-link">Features</button>
+            <button class ="nav-link">How it works</button>
+            <button class ="nav-link">Pricing</button>
         </nav>
     </header>
     <form id="form" action="https://www.freecodecamp.com/email-submit">
@@ -21,5 +23,30 @@
         <input id="email" type="email" placeholder="enter your email address" pattern="[a-zA-Z0-9_]+([.][a-zA-Z0-9_]+)*@[a-zA-Z0-9_]+([.][a-zA-Z0-9_]+)*[.][a-zA-Z]{1,5}" required>
         <input name="email" id="submit" type="submit" value="GET STARTED"></input> 
     </form>
+    <section class="features">
+        <div>
+            <span class="material-symbols-outlined">local_fire_department</span>
+            <section>
+                <h2>Premiun materials</h2>
+                <p> Our trombones use the shiniest brass which is sourced locally. This will increase the longevity of your purchase. </p>
+            </section>
+        </div>
+        <div>
+            <box-icon type='solid' name='truck'  color='#ff8c00' width="10000px"></box-icon>
+            <section>
+                <h2>Fast Shipping</h2>
+                <p>We make sure you recieve your trombone as soon as we have finished making it. We also provide free returns if you are not satisfied. </p>
+            </section>
+        </div>
+        <div>
+            <i class='bx bxs-battery bx-md'></i>
+            <box-icon name='battery' type='solid' color='#ff8c00' size=""></box-icon>
+            <section>
+                <h2>Quality Assurance</h2>
+                <p>For every purchase you make, we will ensure there are no damages or faults and we will check and test the pitch of your instrument. </p>
+            </section>
+        </div>
+    </section>
+ <script src="https://unpkg.com/boxicons@2.1.2/dist/boxicons.js"></script>
 </body>
 </html>
