--- a/Responsive web design/Product_Landing_Page/index.html
+++ b/Responsive web design/Product_Landing_Page/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Product_Landing_Page</title>
     <link rel="stylesheet" href="./styles.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 
 </head>
 <body>
@@ -25,28 +24,33 @@
     </form>
     <section class="features">
         <div>
-            <span class="material-symbols-outlined">local_fire_department</span>
+            <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="#ff8c00" class="bi bi-fire" viewBox="0 0 16 16">
+                <path d="M8 16c3.314 0 6-2 6-5.5 0-1.5-.5-4-2.5-6 .25 1.5-1.25 2-1.25 2C11 4 9 .5 6 0c.357 2 .5 4-2 6-1.25 1-2 2.729-2 4.5C2 14 4.686 16 8 16Zm0-1c-1.657 0-3-1-3-2.75 0-.75.25-2 1.25-3C6.125 10 7 10.5 7 10.5c-.375-1.25.5-3.25 2-3.5-.179 1-.25 2 1 3 .625.5 1 1.364 1 2.25C11 14 9.657 15 8 15Z"/>
+              </svg>
             <section>
                 <h2>Premiun materials</h2>
                 <p> Our trombones use the shiniest brass which is sourced locally. This will increase the longevity of your purchase. </p>
             </section>
         </div>
         <div>
-            <box-icon type='solid' name='truck'  color='#ff8c00' width="10000px"></box-icon>
-            <section>
+            <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="#ff8c00" class="bi bi-truck-front-fill" viewBox="0 0 16 16">
+                <path fill-rule="evenodd" d="M3.5 0A2.5 2.5 0 0 0 1 2.5v9c0 .818.393 1.544 1 2v2a.5.5 0 0 0 .5.5h2a.5.5 0 0 0 .5-.5V14h6v1.5a.5.5 0 0 0 .5.5h2a.5.5 0 0 0 .5-.5v-2c.607-.456 1-1.182 1-2v-9A2.5 2.5 0 0 0 12.5 0h-9ZM3 3a1 1 0 0 1 1-1h8a1 1 0 0 1 1 1v3.9c0 .625-.562 1.092-1.17.994C10.925 7.747 9.208 7.5 8 7.5c-1.208 0-2.925.247-3.83.394A1.008 1.008 0 0 1 3 6.9V3Zm1 9a1 1 0 1 0 0-2 1 1 0 0 0 0 2Zm8 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2Zm-5-2a1 1 0 1 0 0 2h2a1 1 0 1 0 0-2H7Z"/>
+              </svg>            
+              <section>
                 <h2>Fast Shipping</h2>
                 <p>We make sure you recieve your trombone as soon as we have finished making it. We also provide free returns if you are not satisfied. </p>
             </section>
         </div>
         <div>
-            <i class='bx bxs-battery bx-md'></i>
-            <box-icon name='battery' type='solid' color='#ff8c00' size=""></box-icon>
+            <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="#ff8c00" class="bi bi-battery-full" viewBox="0 0 16 16">
+                <path d="M2 6h10v4H2V6z"/>
+                <path d="M2 4a2 2 0 0 0-2 2v4a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V6a2 2 0 0 0-2-2H2zm10 1a1 1 0 0 1 1 1v4a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V6a1 1 0 0 1 1-1h10zm4 3a1.5 1.5 0 0 1-1.5 1.5v-3A1.5 1.5 0 0 1 16 8z"/>
+              </svg>
             <section>
                 <h2>Quality Assurance</h2>
                 <p>For every purchase you make, we will ensure there are no damages or faults and we will check and test the pitch of your instrument. </p>
             </section>
         </div>
     </section>
- <script src="https://unpkg.com/boxicons@2.1.2/dist/boxicons.js"></script>
 </body>
 </html>
