--- a/Responsive web design/Product_Landing_Page/index.html
+++ b/Responsive web design/Product_Landing_Page/index.html
@@ -1,4 +1,4 @@
-    <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -6,25 +6,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Product_Landing_Page</title>
     <link rel="stylesheet" href="./styles.css">
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">     
 </head>
 <body>
     <header id="header">
         <div id="Container-size">
-            <img id="logo" src="https://cdn.freecodecamp.org/testable-projects-fcc/images/product-landing-page-logo.png" alt="logo">
+            <img id="header-img" src="https://cdn.freecodecamp.org/testable-projects-fcc/images/product-landing-page-logo.png" alt="logo">
         </div>
         <nav id="nav-bar">
-            <button class ="nav-link">Features</button>
-            <button class ="nav-link">How it works</button>
-            <button class ="nav-link">Pricing</button>
+            <a class ="nav-link" href="#features">Features</a>
+            <a class ="nav-link" href="#How-it-works">How it works</a>
+            <a class ="nav-link" href="#Pricing">Pricing</a>
         </nav>
     </header>
     <form id="form" action="https://www.freecodecamp.com/email-submit">
         <h2>Hancrafted, home-made masterpices</h2>
-        <input id="email" type="email" placeholder="Enter your email address" pattern="[a-zA-Z0-9_]+([.][a-zA-Z0-9_]+)*@[a-zA-Z0-9_]+([.][a-zA-Z0-9_]+)*[.][a-zA-Z]{1,5}" required>
+        <input id="email" name = "email" type="email" placeholder="Enter your email address" pattern="[a-zA-Z0-9_]+([.][a-zA-Z0-9_]+)*@[a-zA-Z0-9_]+([.][a-zA-Z0-9_]+)*[.][a-zA-Z]{1,5}" required>
         <input name="email" id="submit" type="submit" value="GET STARTED" href="#"></input> 
     </form>
-    <section class="features">
+    <section id="features">
         <div>
             <svg xmlns="http://www.w3.org/2000/svg" width="70" height="70" fill="#ff8c00" class="bi bi-fire" viewBox="0 0 16 16">
                 <path d="M8 16c3.314 0 6-2 6-5.5 0-1.5-.5-4-2.5-6 .25 1.5-1.25 2-1.25 2C11 4 9 .5 6 0c.357 2 .5 4-2 6-1.25 1-2 2.729-2 4.5C2 14 4.686 16 8 16Zm0-1c-1.657 0-3-1-3-2.75 0-.75.25-2 1.25-3C6.125 10 7 10.5 7 10.5c-.375-1.25.5-3.25 2-3.5-.179 1-.25 2 1 3 .625.5 1 1.364 1 2.25C11 14 9.657 15 8 15Z"/>
@@ -54,10 +56,10 @@
             </section>
         </div>
     </section>
-    <section id="video">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/y8Yv4pnO7qc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <section id="How-it-works">
+        <iframe id = "video" width="560" height="315" src="https://www.youtube.com/embed/y8Yv4pnO7qc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </section>
-    <section id="cards">
+    <section id="Pricing">
         <div id="card">
             <h3 id="Title-card">TENOR TROMBONE</h3>
             <h3 id="Price-card">$600</h3>
@@ -86,6 +88,15 @@
                 <input id="Submit-Card" type="submit" value="SELECT">
             </div>
     </section>
-    <footer></footer>
+    <footer>
+        <div id="items">
+            <a>Privace</a>
+            <a>Terms</a>
+            <a>Contact</a>
+        </div>
+        <div id="copy">
+            <p>Copyright 2022, Original Trombones</p>
+        </div>
+    </footer>
 </body>
 </html>
